Modified _general.styl to fix a case where the event description text would overflow beyond the container on the homepage.
-Jeffalot

--- a/themes/rvagj/source/css/_general.styl
+++ b/themes/rvagj/source/css/_general.styl
@@ -28,9 +28,7 @@ p
 
 .container
     width: container-size
-    height: inherit
     min-height: fit-content
-    padding-bottom: 200px
     box-shadow: 0px 6px 18px 3px rgba(0, 0, 0, 0.29)
     .container-padding
         padding: container-padding
